--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,11 @@
         	<groupId>javax.servlet</groupId>
         	<artifactId>servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
